default on js backend

--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <groovyBaseDir>${project.basedir}</groovyBaseDir>
-        <bytecoder-mavenplugin.backend>wasm_llvm
+        <bytecoder-mavenplugin.backend>js
         <!-- js or wasm_llvm -->
         </bytecoder-mavenplugin.backend>
 
