--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -23,7 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>com.squins.libgdx.backends.bytecoder</groupId>
-            <artifactId>gdx-backend-bytecoder-shaded</artifactId>
+            <artifactId>gdx-backend-bytecoder</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
