--- a/gdx-backend-bytecoder/pom.xml
+++ b/gdx-backend-bytecoder/pom.xml
@@ -15,9 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.badlogicgames.gdx</groupId>
-            <artifactId>gdx</artifactId>
-            <version>${gdx.version}</version>
+            <groupId>com.squins.libgdx.backends.bytecoder</groupId>
+            <artifactId>bytecoder-patched-gdx</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -27,7 +27,6 @@
         <dependency>
             <groupId>de.mirkosertic.bytecoder</groupId>
             <artifactId>bytecoder.web</artifactId>
-            <version>${bytecoder.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
