--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -70,6 +70,11 @@
                     <filenamePrefix>main</filenamePrefix>
                     <enableExceptionHandling>true</enableExceptionHandling>
                     <optimizationLevel>NONE</optimizationLevel>
+                    <additionalClassesToLink>
+                        <link>com.badlogic.gdx.graphics.g2d.BitmapFont</link>
+                        <link>com.badlogic.gdx.graphics.Color</link>
+                    </additionalClassesToLink>
+
                 </configuration>
                 <executions>
                     <execution>
