--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -77,6 +77,7 @@
                                         <exclude>com/badlogic/gdx/utils/Timer.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/TimeUtils.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/Utf8Decoder.class</exclude>
+                                        <exclude>com/badlogic/gdx/scenes/scene2d/ui/Skin.class</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
