shaded ClassReflection and test new method

--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -78,6 +78,7 @@
                                         <exclude>com/badlogic/gdx/utils/TimeUtils.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/Utf8Decoder.class</exclude>
                                         <exclude>com/badlogic/gdx/scenes/scene2d/ui/Skin.class</exclude>
+                                        <exclude>com/badlogic/gdx/utils/reflect/ClassReflection.class</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
