more debugging and shaded classes(maybe better for performance)

--- a/gdx-backend-bytecoder-example/pom.xml
+++ b/gdx-backend-bytecoder-example/pom.xml
@@ -69,8 +69,8 @@
                     <backend>${bytecoder-mavenplugin.backend}</backend>
                     <filenamePrefix>main</filenamePrefix>
                     <enableExceptionHandling>true</enableExceptionHandling>
-                    <minifyCompileResult>false</minifyCompileResult>
-                    <optimizationLevel>NONE</optimizationLevel>
+<!--                    <minifyCompileResult>false</minifyCompileResult>-->
+                    <optimizationLevel>ALL</optimizationLevel>
                 </configuration>
                 <executions>
                     <execution>
