--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -79,6 +79,10 @@
                                         <exclude>com/badlogic/gdx/utils/Utf8Decoder.class</exclude>
                                         <exclude>com/badlogic/gdx/scenes/scene2d/ui/Skin.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/reflect/ClassReflection.class</exclude>
+                                        <exclude>com/badlogic/gdx/utils/async/AsyncExecutor.class</exclude>
+                                        <exclude>com/badlogic/gdx/utils/async/AsyncResult.class</exclude>
+                                        <exclude>com/badlogic/gdx/utils/async/AsyncTask.class</exclude>
+                                        <exclude>com/badlogic/gdx/utils/async/ThreadUtils.class</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
