deleted eclipse and working on gradle

--- a/libgdx-sample-app/build.gradle
+++ b/libgdx-sample-app/build.gradle
@@ -20,11 +20,11 @@ task prepareKotlinBuildScriptModel {
 
 task wrapper(type: Wrapper) {
     jarFile = file('../gradle/wrapper/gradle-wrapper.jar')
+    distributionPath = '../gradle/wrapper'
+    archivePath = '../'
 }
 
 allprojects {
-//    apply plugin: "eclipse"
-
     group = 'com.squins.libgdx.backends.bytecoder.sample.app'
     version = '1.0-SNAPSHOT'
 
