--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -23,4 +23,5 @@ jobs:
     - uses: eskatos/gradle-command-action@v1
       with:
         arguments: runMvnTask
+        wrapper-directory: ../ 
    
