Fix after merge conflict

--- a/libgdx-sample-app/core/build.gradle
+++ b/libgdx-sample-app/core/build.gradle
@@ -1,15 +1,32 @@
 apply plugin: "kotlin"
-apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.7
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 
+apply plugin: 'maven-publish'
 
-dependencies {
-    api "com.badlogicgames.gdx:gdx:$gdxVersion"
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+project(":libgdx-sample-app:desktop") {
+    apply plugin: "kotlin"
+
+
+    dependencies {
+        implementation project(":libgdx-sample-app:core")
+        api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    }
+}
+
+project(":libgdx-sample-app:core") {
+    apply plugin: "kotlin"
+
+
+    dependencies {
+        api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    }
 }
 
 
