Excluded some nested classes (more to do)

--- a/gdx-backend-bytecoder-shaded/pom.xml
+++ b/gdx-backend-bytecoder-shaded/pom.xml
@@ -79,7 +79,11 @@
                                         <exclude>com/badlogic/gdx/utils/Utf8Decoder.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/ObjectMap.class</exclude>
                                         <exclude>com/badlogic/gdx/scenes/scene2d/ui/Skin.class</exclude>
-<!--                                        <exclude>com/badlogic/gdx/utils/reflect/ClassReflection.class</exclude>-->
+                                        <exclude>com/badlogic/gdx/scenes/scene2d/ui/Skin$2.class</exclude>
+                                        <exclude>com/badlogic/gdx/scenes/scene2d/ui/Skin$3.class</exclude>
+                                        <exclude>com/badlogic/gdx/scenes/scene2d/ui/Skin$4.class</exclude>
+                                        <exclude>com/badlogic/gdx/scenes/scene2d/ui/Skin$5.class</exclude>
+                                        <!--                                        <exclude>com/badlogic/gdx/utils/reflect/ClassReflection.class</exclude>-->
                                         <exclude>com/badlogic/gdx/utils/async/AsyncExecutor.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/async/AsyncResult.class</exclude>
                                         <exclude>com/badlogic/gdx/utils/async/AsyncTask.class</exclude>
